ui: redesigned snackbar and fixed z-index issues

--- a/src/index.css
+++ b/src/index.css
@@ -39,42 +39,28 @@ input[type="number"] {
 }
 
 /* SNACKBAR */
-.showSnackbarBttn {
-  width: 200px;
-  height: 50px;
-  background-color: cornflowerblue;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  color: white;
-  font-size: 20px;
-}
 .snackbar {
+  z-index: 99;
   position: fixed;
   left: 50%;
   top: 5%;
   transform: translate(-50%, -50%);
-  width: 350px;
-  height: 60px;
+  width: 335px;
+  height: 45px;
   border-radius: 8px;
   display: flex;
   align-items: center;
+  justify-content: center;
   text-align: center;
-}
-
-.snackbar .symbol {
-  flex: 20%;
-}
-
-.snackbar .message {
-  flex: 80%;
-  text-align: start;
-  font-weight: bold;
+  gap: 1em;
+  font-size: 0.95rem;
 }
 
 #show {
   visibility: visible;
-  animation: fadeIn 0.5s, fadeOut 0.5s 2.5s;
+  animation:
+    fadeIn 0.5s,
+    fadeOut 0.5s 2.5s;
 }
 #hide {
   visibility: hidden;
